# src/app.ts
@@ -5,9 +5,13 @@ import swaggerUi from 'swagger-ui-express';
 import YAML from 'yamljs';
 import path from 'path';
 
-// We will create these middlewares shortly
-// import { errorHandler } from './shared/middlewares/errorHandler';
-// import { globalLimiter } from './shared/middlewares/rateLimiter';
+import { errorHandler } from './shared/middlewares/errorHandler';
+import { globalLimiter } from './shared/middlewares/rateLimiter';
+import authRoutes from './modules/auth/auth.route';
+import eventRoutes from './modules/events/event.route';
+import ticketRoutes from './modules/tickets/ticket.route';
+import paymentRoutes from './modules/payments/payment.route';
+import analyticsRoutes from './modules/analytics/analytics.route';
 
 const app: Application = express();
 
@@ -18,11 +22,11 @@ app.use(express.json());
 app.use(express.urlencoded({ extended: true }));
 
 // Swagger Documentation
-// const swaggerDocument = YAML.load(path.join(__dirname, '../swagger.yaml'));
-// app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+const swaggerDocument = YAML.load(path.join(__dirname, '../swagger.yaml'));
+app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-// Apply global rate limiting (to be imported)
-// app.use(globalLimiter);
+
+app.use(globalLimiter);
 
 // Health Check Route
 app.get('/health', (req: Request, res: Response) => {
@@ -31,14 +35,13 @@ app.get('/health', (req: Request, res: Response) => {
 		.json({ status: 'success', message: 'Eventful API is running' });
 });
 
-// Mount Routes (To be implemented)
-// app.use('/api/v1/auth', authRoutes);
-// app.use('/api/v1/events', eventRoutes);
-// app.use('/api/v1/tickets', ticketRoutes);
-// app.use('/api/v1/payments', paymentRoutes);
-// app.use('/api/v1/analytics', analyticsRoutes);
+app.use('/api/v1/auth', authRoutes);
+app.use('/api/v1/events', eventRoutes);
+app.use('/api/v1/tickets', ticketRoutes);
+app.use('/api/v1/payments', paymentRoutes);
+app.use('/api/v1/analytics', analyticsRoutes);
 
-// Global Error Handler (To be implemented)
-// app.use(errorHandler);
+
+app.use(errorHandler);
 
 export default app;
